--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,30 @@
 version: 2
 jobs:
   build:
+    working_directory: ~/store
     docker:
-      - image: circleci/ruby:2.3.3
-    working_directory: ~/circleci-docs
-
-machine:
-
-    python:
-        version: 2.7.6
-
-dependencies:
-    pre:
-        - pip install -U pip
-
-test:
-    override:
-        - ./test.sh
-
-notify:
-  webhooks:
-    # A list of hashes representing hooks. Only the url field is supported.
-    - url: https://hook.lesschat.com/circleci/6254d4312f2440e1a1767475b266d8eb
+      - image: circleci/python:2.7.6
+      - image: circleci/postgres:9.6.2
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: circle_test
+    steps:
+      - checkout
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+      - run:
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
+      - run:
+          command: |
+            . venv/bin/activate
+            python manage.py test
+      - store_artifacts:
+          path: test-reports/
+          destination: tr1
