--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/store
     docker:
-      - image: circleci/python:2.7.6
+      - image: circleci/python:3.6.1
       - image: circleci/postgres:9.6.2
         environment:
           POSTGRES_USER: root
@@ -14,7 +14,7 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
-            python -m venv venv
+            python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
