--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 coverage==3.7.1
-dj-database-url==0.4.1
-Django==1.10.2
 gunicorn==19.6.0
-psycopg2==2.6.2
-wheel==0.24.0
-whitenoise==3.2.2
 djangorestframework==3.1.0
+Django==1.11.2
+MySQL-python==1.2.3
+xlrd==1.0.0
+xlwt==1.2.0
