--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,18 @@ jobs:
   build:
     working_directory: ~/store
     docker:
-      - image: circleci/python:3.6.1
-      - image: circleci/postgres:9.6.2
+      - image: circleci/python:2.7.13
+      - image: circleci/mysql:5.7
         environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
+          MYSQL_DATABASE: circle_test
+          MYSQL_USER: root
     steps:
       - checkout
       - restore_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
-            python3 -m venv venv
+            python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
@@ -24,7 +24,7 @@ jobs:
       - run:
           command: |
             . venv/bin/activate
-            python manage.py test
+            python manage.py test tests
       - store_artifacts:
           path: test-reports/
           destination: tr1
