--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
-            pip install -r requirements.txt
+            sudo pip install -r requirements.txt
             python -m venv venv
             . venv/bin/activate
       - save_cache:
