--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           command: |
             sudo pip install -r requirements.txt
-            python -m venv venv
+            python -m virtualenv venv
             . venv/bin/activate
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
