--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,21 +13,11 @@ jobs:
           MYSQL_ROOT_PASSWORD: '123456'
     steps:
       - checkout
-      - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
-            sudo pip install virtualenv==15.1.0
-            python -m virtualenv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-          paths:
-            - "venv"
+            sudo pip install -r requirements.txt
       - run:
           command: |
-            . venv/bin/activate
             python manage.py test tests
       - store_artifacts:
           path: test-reports/
